Jupyter notebook for the project with visualizations

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -572,7 +572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the structure \"per se\" is not efficient and barely provides comparable information, I initially implement an Encoding so I can have the variables as columns at the very beginning, and already start the EDA with it"
+    "As the structure itself is not efficient and barely provides comparable information, I initially implement an Encoding so I can have the variables as columns at the very beginning, and already start the EDA with it"
    ]
   },
   {
