final design of Dash

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1348,10 +1348,10 @@
      "data": {
       "text/plain": [
        "SP.DYN.LE00.IN       1620\n",
-       "SP.POP.TOTL.FE.ZS    1620\n",
-       "SP.POP.TOTL          1620\n",
-       "SP.DYN.CBRT.IN       1620\n",
        "SP.URB.TOTL.IN.ZS    1620\n",
+       "SP.DYN.CBRT.IN       1620\n",
+       "SP.POP.TOTL          1620\n",
+       "SP.POP.TOTL.FE.ZS    1620\n",
        "                     ... \n",
        "LO.PISA.REA           168\n",
        "GC.DOD.TOTL.GD.ZS     117\n",
@@ -3714,27 +3714,11 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'Data_streamlit/dataset_no_groupby.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-42-ca6758cadfba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Transfer dataset to a .csv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mdf2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Data_streamlit/dataset_no_groupby.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, decimal, errors, storage_options)\u001b[0m\n\u001b[0;32m   3385\u001b[0m         )\n\u001b[0;32m   3386\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3387\u001b[1;33m         return DataFrameRenderer(formatter).to_csv(\n\u001b[0m\u001b[0;32m   3388\u001b[0m             \u001b[0mpath_or_buf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3389\u001b[0m             \u001b[0mline_terminator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mline_terminator\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\format.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, encoding, sep, columns, index_label, mode, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, errors, storage_options)\u001b[0m\n\u001b[0;32m   1081\u001b[0m             \u001b[0mformatter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfmt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1082\u001b[0m         )\n\u001b[1;32m-> 1083\u001b[1;33m         \u001b[0mcsv_formatter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1084\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1085\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mcreated_buffer\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\csvs.py\u001b[0m in \u001b[0;36msave\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    226\u001b[0m         \"\"\"\n\u001b[0;32m    227\u001b[0m         \u001b[1;31m# apply compression and byte/text conversion\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 228\u001b[1;33m         with get_handle(\n\u001b[0m\u001b[0;32m    229\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    230\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\common.py\u001b[0m in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    640\u001b[0m                 \u001b[0merrors\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"replace\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    641\u001b[0m             \u001b[1;31m# Encoding\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 642\u001b[1;33m             handle = open(\n\u001b[0m\u001b[0;32m    643\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    644\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Data_streamlit/dataset_no_groupby.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Transfer dataset to a .csv\n",
     "\n",
-    "df2.to_csv('Data_streamlit/dataset_no_groupby.csv')"
+    "#df2.to_csv('Data_streamlit/dataset_no_groupby.csv')"
    ]
   },
   {
@@ -3864,6 +3848,159 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poverty ratio (% Pop.)\n",
+      "Vulnerable empolyment (% Empl.)\n",
+      "Salaried workers (% Empl.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in dictionary['1. No poverty']:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2019,\n",
+       " 2018,\n",
+       " 2017,\n",
+       " 2016,\n",
+       " 2015,\n",
+       " 2014,\n",
+       " 2013,\n",
+       " 2012,\n",
+       " 2011,\n",
+       " 2010,\n",
+       " 2009,\n",
+       " 2008,\n",
+       " 2007,\n",
+       " 2006,\n",
+       " 2005,\n",
+       " 2004,\n",
+       " 2003,\n",
+       " 2002,\n",
+       " 2001,\n",
+       " 2000,\n",
+       " 1999,\n",
+       " 1998,\n",
+       " 1997,\n",
+       " 1996,\n",
+       " 1995,\n",
+       " 1994,\n",
+       " 1993,\n",
+       " 1992,\n",
+       " 1991]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(-np.sort(-df2[df2['Vulnerable empolyment (% Empl.)'] != 0]['Year'].unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9c79453fb6e74941b7aefaf91dedc871",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Target:', layout=Layout(width='40%'), options=('1. No poverty', '2…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Interactive map\n",
+    "\n",
+    "Target = widgets.Dropdown( options=list(dictionary.keys()),\n",
+    "                         value='1. No poverty',\n",
+    "                         description='Target:',\n",
+    "                         layout=widgets.Layout(width='40%')\n",
+    "                         )\n",
+    "                          \n",
+    "Indicator = widgets.Dropdown( options=dictionary['1. No poverty'],\n",
+    "                         value='Vulnerable empolyment (% Empl.)',\n",
+    "                         description='Indicator:',\n",
+    "                         layout=widgets.Layout(width='40%')\n",
+    "                         )\n",
+    "\n",
+    "Year = widgets.Dropdown( options=list(-np.sort(-df2[df2['Vulnerable empolyment (% Empl.)'] != 0]['Year'].unique())),\n",
+    "                         value=2019,\n",
+    "                         description='Year:',\n",
+    "                         layout=widgets.Layout(width='40%')\n",
+    "                         )\n",
+    "\n",
+    "def on_update_Target(*args):\n",
+    "    Indicator.options = dictionary[Target.value]\n",
+    "\n",
+    "Target.observe(on_update_Target, 'value')\n",
+    "\n",
+    "def on_update_Indicator(*args):\n",
+    "    Year.options = list(-np.sort(-df2[df2[Indicator.value] != 0]['Year'].unique()))\n",
+    "    \n",
+    "Indicator.observe(on_update_Indicator, 'value')\n",
+    "\n",
+    "@interact(Target=Target,\n",
+    "        Indicator=Indicator,\n",
+    "        Year=Year)\n",
+    "\n",
+    "def Map_interactive(Target=Target, Indicator=Indicator, Year=Year):\n",
+    "    new_df = df2[(df2['Year'] == Year) & (df2[Indicator] !=0)]\n",
+    "    new_df['Rank'] = new_df[Indicator].rank(ascending=False)\n",
+    "    new_df['Average_EU'] = round(new_df[Indicator].mean(),2)\n",
+    "    \n",
+    "    geo_objects = json.load(open('Data/europe.json'))\n",
+    "    \n",
+    "    \n",
+    "    fig=px.choropleth(new_df, geojson=geo_objects, featureidkey=\"properties.ISO3\",locations='Country ISO3',\n",
+    "                      color_continuous_scale=\"Greens\" if dictionary2[Indicator] == 'Positive' else 'Reds',\n",
+    "                      color=Indicator, scope='europe',\n",
+    "                     projection='natural earth',\n",
+    "                     template='ggplot2',height=600,\n",
+    "                     hover_name='Country Name',\n",
+    "                     hover_data={'Country ISO3':False, Indicator:True, 'Average_EU':True, 'Rank':True})\n",
+    "    \n",
+    "    fig.update_layout(font_family='Trebuchet MS', font_size=10, hoverlabel_font_size=10, margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0}, hoverlabel_bgcolor='Green' if dictionary2[Indicator] == 'Positive' else 'DarkRed')\n",
+    "    fig.update_coloraxes(colorbar_len=0.7)\n",
+    "    fig.update_coloraxes(colorbar_ticks=\"\")\n",
+    "    fig.update_coloraxes(colorbar_outlinewidth=0.21)\n",
+    "    fig.update_coloraxes(colorbar_thickness=30)\n",
+    "    fig.update_coloraxes(colorbar_title_text='Indicator Range')\n",
+    "    fig.update_coloraxes(colorbar_title_side='right')\n",
+    "    fig.update_coloraxes(colorbar_ticklabelposition='inside')\n",
+    "    \n",
+    "    fig.show()\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
@@ -3871,7 +4008,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b09085be3b1a48f09be7358598266822",
+       "model_id": "4bde1467198d454ea18febf66e202cb5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3984,7 +4121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3995,7 +4132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4004,7 +4141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4100,24 +4237,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Transfer dataset to a .csv\n",
     "\n",
-    "df2_gb.to_csv('Data_streamlit/dataset_groupby.csv')"
+    "#df2_gb.to_csv('Data_streamlit/dataset_groupby.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14922f5067c847bf8eaec18e8c9fcb75",
+       "model_id": "4ba57ab87bc247128c3ca4a06a408e94",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4169,13 +4306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97d7b603885944a5833286e9109957e8",
+       "model_id": "fb38efd900614c6fae04948e5a6830dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4217,6 +4354,7 @@
     "    fig.update_coloraxes(colorbar_title_side='right')\n",
     "    fig.update_coloraxes(colorbar_ticklabelposition='inside')\n",
     "    \n",
+    "        \n",
     "    fig.layout.updatemenus[0].buttons[0].args[1][\"frame\"][\"duration\"] = 888\n",
     "    \n",
     "    fig.show()"
@@ -4224,16 +4362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Pasar a Streamlit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4242,7 +4371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4251,7 +4380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4260,7 +4389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
